Config dumping bugfix

--- a/config.json
+++ b/config.json
@@ -1,136 +1,1 @@
-{
-    "ranges": {
-        "a_octave_oct": [
-            -4.0,
-            4.0,
-            1.0
-        ],
-        "a_semi_semitones": [
-            -12.0,
-            12.0,
-            1.0
-        ],
-        "a_scan_bpm_rate": [
-            0.0,
-            1.0,
-            0.16666666666666666
-        ],
-        "a_unison": [
-            1.0,
-            16.0,
-            1.0
-        ],
-        "b_octave_oct": [
-            -4.0,
-            4.0,
-            1.0
-        ],
-        "b_semi_semitones": [
-            -12.0,
-            12.0,
-            1.0
-        ],
-        "b_scan_bpm_rate": [
-            0.0,
-            1.0,
-            0.16666666666666666
-        ],
-        "b_unison": [
-            1.0,
-            16.0,
-            1.0
-        ],
-        "c_octave_oct": [
-            -4.0,
-            4.0,
-            1.0
-        ],
-        "c_semi_semitones": [
-            -12.0,
-            12.0,
-            1.0
-        ],
-        "c_scan_bpm_rate": [
-            0.0,
-            1.0,
-            0.16666666666666666
-        ],
-        "c_unison": [
-            1.0,
-            16.0,
-            1.0
-        ],
-        "sub_octave_oct": [
-            -4.0,
-            4.0,
-            1.0
-        ],
-        "filter_1_x": [
-            0.0,
-            1.0,
-            1.0
-        ],
-        "filter_1_y": [
-            0.0,
-            1.0,
-            1.0
-        ],
-        "filter_2_x": [
-            0.0,
-            1.0,
-            1.0
-        ],
-        "filter_2_y": [
-            0.0,
-            1.0,
-            1.0
-        ]
-    },
-    "num_categories": {
-        "a_enable": 2,
-        "a_pitch_track": 2,
-        "a_reverse": 2,
-        "a_scan_key_track": 2,
-        "a_loop_mode": 5,
-        "a_relative_loop": 2,
-        "a_slice_play_mode": 2,
-        "a_uni_stack": 9,
-        "a_warp": 1,
-        "a_warp_mode": 70,
-        "a_warp_2": 1,
-        "a_warp_2_mode": 70,
-        "b_enable": 2,
-        "b_pitch_track": 2,
-        "b_reverse": 2,
-        "b_scan_key_track": 2,
-        "b_loop_mode": 5,
-        "b_relative_loop": 2,
-        "b_slice_play_mode": 2,
-        "b_uni_stack": 9,
-        "b_warp": 1,
-        "b_warp_mode": 70,
-        "b_warp_2": 1,
-        "b_warp_2_mode": 70,
-        "c_enable": 2,
-        "c_pitch_track": 2,
-        "c_reverse": 2,
-        "c_scan_key_track": 2,
-        "c_loop_mode": 5,
-        "c_relative_loop": 2,
-        "c_slice_play_mode": 2,
-        "c_uni_stack": 9,
-        "c_warp": 1,
-        "c_warp_mode": 70,
-        "c_warp_2": 1,
-        "c_warp_2_mode": 70,
-        "sub_enable": 2,
-        "sub_pitch_track": 2,
-        "sub_shape": 6,
-        "sub_cont_phase": 2,
-        "filter_1_on": 2,
-        "filter_2_on": 2,
-        "arp_enable": 2
-    },
-    "cont_types": "{'a_octave_oct': <class 'float'>, 'a_semi_semitones': <class 'float'>, 'a_scan_bpm_rate': <class 'str'>, 'a_unison': <class 'float'>, 'b_octave_oct': <class 'float'>, 'b_semi_semitones': <class 'float'>, 'b_scan_bpm_rate': <class 'str'>, 'b_unison': <class 'float'>, 'c_octave_oct': <class 'float'>, 'c_semi_semitones': <class 'float'>, 'c_scan_bpm_rate': <class 'str'>, 'c_unison': <class 'float'>, 'sub_octave_oct': <class 'float'>, 'filter_1_x': <class 'float'>, 'filter_1_y': <class 'float'>, 'filter_2_x': <class 'float'>, 'filter_2_y': <class 'float'>}",
-    "cat_types": "{'a_enable': <class 'bool'>, 'a_pitch_track': <class 'bool'>, 'a_reverse': <class 'str'>, 'a_scan_key_track': <class 'bool'>, 'a_loop_mode': <class 'str'>, 'a_relative_loop': <class 'bool'>, 'a_slice_play_mode': <class 'str'>, 'a_uni_stack': <class 'str'>, 'a_warp': <class 'str'>, 'a_warp_mode': <class 'str'>, 'a_warp_2': <class 'str'>, 'a_warp_2_mode': <class 'str'>, 'b_enable': <class 'bool'>, 'b_pitch_track': <class 'bool'>, 'b_reverse': <class 'str'>, 'b_scan_key_track': <class 'bool'>, 'b_loop_mode': <class 'str'>, 'b_relative_loop': <class 'bool'>, 'b_slice_play_mode': <class 'str'>, 'b_uni_stack': <class 'str'>, 'b_warp': <class 'str'>, 'b_warp_mode': <class 'str'>, 'b_warp_2': <class 'str'>, 'b_warp_2_mode': <class 'str'>, 'c_enable': <class 'bool'>, 'c_pitch_track': <class 'bool'>, 'c_reverse': <class 'str'>, 'c_scan_key_track': <class 'bool'>, 'c_loop_mode': <class 'str'>, 'c_relative_loop': <class 'bool'>, 'c_slice_play_mode': <class 'str'>, 'c_uni_stack': <class 'str'>, 'c_warp': <class 'str'>, 'c_warp_mode': <class 'str'>, 'c_warp_2': <class 'str'>, 'c_warp_2_mode': <class 'str'>, 'sub_enable': <class 'bool'>, 'sub_pitch_track': <class 'bool'>, 'sub_shape': <class 'str'>, 'sub_cont_phase': <class 'bool'>, 'filter_1_on': <class 'bool'>, 'filter_2_on': <class 'bool'>, 'arp_enable': <class 'bool'>}"
-}
+{"ranges": {"a_level": [0.0, 1.0, 0.0019083969465648854], "a_pan": [0.0, 1.0, 0.01], "a_octave_oct": [-4.0, 4.0, 1.0], "a_semi_semitones": [-12.0, 12.0, 1.0], "a_fine_cents": [-100.0, 100.0, 1.0], "a_ratio": [0.0, 1.0, 0.001], "a_hz_offset_hz": [-1000.0, 1000.0, 2.0], "a_coarse_pitch": [0.0, 1.0, 0.001], "a_start": [0.0, 100.0, 1.0], "a_end": [0.0, 100.0, 1.0], "a_scan_rate": [-200.0, 200.0, 1.0], "a_scan_bpm_rate": [0.0, 1.0, 0.16666666666666666], "a_position": [0.0, 100.0, 1.0], "a_loop_start": [0.0, 100.0, 1.0], "a_loop_end": [0.0, 100.0, 1.0], "a_loop_x_fade": [0.0, 100.0, 1.0], "a_single_slice": [1.0, 100.0, 1.0], "a_unison": [1.0, 16.0, 1.0], "a_uni_detune": [0.0, 1.0, 0.01], "a_uni_blend": [0.0, 100.0, 1.0], "a_uni_width": [-100.0, 100.0, 1.0], "a_uni_span": [-100.0, 100.0, 1.0], "a_uni_rand_start": [0.0, 100.0, 1.0], "a_uni_warp": [-100.0, 100.0, 1.0], "a_uni_warp_2": [-100.0, 100.0, 1.0], "a_warp_var": [0.0, 1.0, 0.001], "a_warp_2_var": [0.0, 1.0, 0.001], "a_wt_pos": [1.0, 256.0, 1.0], "a_uni_wt_pos": [-100.0, 100.0, 1.0], "a_phase": [0.0, 1.0, 0.002777777777777778], "a_rand_phase": [0.0, 100.0, 1.0], "a_param44": [0.0, 1.0, 0.001], "a_param45": [0.0, 1.0, 0.001], "a_param46": [0.0, 1.0, 0.001], "a_param47": [0.0, 1.0, 0.001], "a_param48": [0.0, 1.0, 0.001], "a_param49": [0.0, 1.0, 0.001], "a_param50": [0.0, 1.0, 0.001], "a_param51": [0.0, 1.0, 0.001], "a_param52": [0.0, 1.0, 0.001], "a_param53": [0.0, 1.0, 0.001], "a_param54": [0.0, 1.0, 0.001], "a_param55": [0.0, 1.0, 0.001], "b_level": [0.0, 1.0, 0.0019083969465648854], "b_pan": [0.0, 1.0, 0.01], "b_octave_oct": [-4.0, 4.0, 1.0], "b_semi_semitones": [-12.0, 12.0, 1.0], "b_fine_cents": [-100.0, 100.0, 1.0], "b_ratio": [0.0, 1.0, 0.001], "b_hz_offset_hz": [-1000.0, 1000.0, 2.0], "b_coarse_pitch": [0.0, 1.0, 0.001], "b_start": [0.0, 100.0, 1.0], "b_end": [0.0, 100.0, 1.0], "b_scan_rate": [-200.0, 200.0, 1.0], "b_scan_bpm_rate": [0.0, 1.0, 0.16666666666666666], "b_position": [0.0, 100.0, 1.0], "b_loop_start": [0.0, 100.0, 1.0], "b_loop_end": [0.0, 100.0, 1.0], "b_loop_x_fade": [0.0, 100.0, 1.0], "b_single_slice": [1.0, 100.0, 1.0], "b_unison": [1.0, 16.0, 1.0], "b_uni_detune": [0.0, 1.0, 0.01], "b_uni_blend": [0.0, 100.0, 1.0], "b_uni_width": [-100.0, 100.0, 1.0], "b_uni_span": [-100.0, 100.0, 1.0], "b_uni_rand_start": [0.0, 100.0, 1.0], "b_uni_warp": [-100.0, 100.0, 1.0], "b_uni_warp_2": [-100.0, 100.0, 1.0], "b_warp_var": [0.0, 1.0, 0.001], "b_warp_2_var": [0.0, 1.0, 0.001], "b_wt_pos": [1.0, 256.0, 1.0], "b_uni_wt_pos": [-100.0, 100.0, 1.0], "b_phase": [0.0, 1.0, 0.002777777777777778], "b_rand_phase": [0.0, 100.0, 1.0], "b_param44": [0.0, 1.0, 0.001], "b_param45": [0.0, 1.0, 0.001], "b_param46": [0.0, 1.0, 0.001], "b_param47": [0.0, 1.0, 0.001], "b_param48": [0.0, 1.0, 0.001], "b_param49": [0.0, 1.0, 0.001], "b_param50": [0.0, 1.0, 0.001], "b_param51": [0.0, 1.0, 0.001], "b_param52": [0.0, 1.0, 0.001], "b_param53": [0.0, 1.0, 0.001], "b_param54": [0.0, 1.0, 0.001], "b_param55": [0.0, 1.0, 0.001], "c_level": [0.0, 1.0, 0.0019083969465648854], "c_pan": [0.0, 1.0, 0.01], "c_octave_oct": [-4.0, 4.0, 1.0], "c_semi_semitones": [-12.0, 12.0, 1.0], "c_fine_cents": [-100.0, 100.0, 1.0], "c_ratio": [0.0, 1.0, 0.001], "c_hz_offset_hz": [-1000.0, 1000.0, 2.0], "c_coarse_pitch": [0.0, 1.0, 0.001], "c_start": [0.0, 100.0, 1.0], "c_end": [0.0, 100.0, 1.0], "c_scan_rate": [-200.0, 200.0, 1.0], "c_scan_bpm_rate": [0.0, 1.0, 0.16666666666666666], "c_position": [0.0, 100.0, 1.0], "c_loop_start": [0.0, 100.0, 1.0], "c_loop_end": [0.0, 100.0, 1.0], "c_loop_x_fade": [0.0, 100.0, 1.0], "c_single_slice": [1.0, 100.0, 1.0], "c_unison": [1.0, 16.0, 1.0], "c_uni_detune": [0.0, 1.0, 0.01], "c_uni_blend": [0.0, 100.0, 1.0], "c_uni_width": [-100.0, 100.0, 1.0], "c_uni_span": [-100.0, 100.0, 1.0], "c_uni_rand_start": [0.0, 100.0, 1.0], "c_uni_warp": [-100.0, 100.0, 1.0], "c_uni_warp_2": [-100.0, 100.0, 1.0], "c_warp_var": [0.0, 1.0, 0.001], "c_warp_2_var": [0.0, 1.0, 0.001], "c_wt_pos": [1.0, 256.0, 1.0], "c_uni_wt_pos": [-100.0, 100.0, 1.0], "c_phase": [0.0, 1.0, 0.002777777777777778], "c_rand_phase": [0.0, 100.0, 1.0], "c_param44": [0.0, 1.0, 0.001], "c_param45": [0.0, 1.0, 0.001], "c_param46": [0.0, 1.0, 0.001], "c_param47": [0.0, 1.0, 0.001], "c_param48": [0.0, 1.0, 0.001], "c_param49": [0.0, 1.0, 0.001], "c_param50": [0.0, 1.0, 0.001], "c_param51": [0.0, 1.0, 0.001], "c_param52": [0.0, 1.0, 0.001], "c_param53": [0.0, 1.0, 0.001], "c_param54": [0.0, 1.0, 0.001], "c_param55": [0.0, 1.0, 0.001], "sub_level": [0.0, 1.0, 0.0019083969465648854], "sub_pan": [0.0, 1.0, 0.01], "sub_octave_oct": [-4.0, 4.0, 1.0], "sub_coarse_pitch": [0.0, 1.0, 0.001], "sub_phase": [0.0, 1.0, 0.002777777777777778], "filter_1_level": [0.0, 1.0, 0.0020920502092050207], "filter_1_type": [0, 0.991, 0.009349056603773585], "filter_1_freq_hz": [0.0, 1.0, 0.0012953367875647669], "filter_1_res": [0.0, 100.0, 1.0], "filter_1_drive": [0.0, 100.0, 1.0], "filter_1_var": [0.0, 100.0, 1.0], "filter_1_wet": [0.0, 100.0, 1.0], "filter_1_stereo": [0.0, 100.0, 1.0], "filter_1_x": [0.0, 1.0, 1.0], "filter_1_y": [0.0, 1.0, 1.0], "filter_2_level": [0.0, 1.0, 0.0020920502092050207], "filter_2_type": [0, 0.991, 0.009349056603773585], "filter_2_freq_hz": [0.0, 1.0, 0.0012953367875647669], "filter_2_res": [0.0, 100.0, 1.0], "filter_2_drive": [0.0, 100.0, 1.0], "filter_2_var": [0.0, 100.0, 1.0], "filter_2_wet": [0.0, 100.0, 1.0], "filter_2_stereo": [0.0, 100.0, 1.0], "filter_2_x": [0.0, 1.0, 1.0], "filter_2_y": [0.0, 1.0, 1.0], "a_filter_balance": [-100.0, 100.0, 1.0], "a_bus1": [0.0, 1.0, 0.009900990099009901], "a_bus2": [0.0, 1.0, 0.009900990099009901], "b_filter_balance": [-100.0, 100.0, 1.0], "b_bus1": [0.0, 1.0, 0.009900990099009901], "b_bus2": [0.0, 1.0, 0.009900990099009901], "c_filter_balance": [-100.0, 100.0, 1.0], "c_bus1": [0.0, 1.0, 0.009900990099009901], "c_bus2": [0.0, 1.0, 0.009900990099009901], "sub_osc_filter_balance": [-100.0, 100.0, 1.0], "sub_osc_bus1": [0.0, 1.0, 0.009900990099009901], "sub_osc_bus2": [0.0, 1.0, 0.009900990099009901], "filter_1_bus1": [0.0, 1.0, 0.009900990099009901], "filter_1_bus2": [0.0, 1.0, 0.009900990099009901], "filter_2_bus1": [0.0, 1.0, 0.009900990099009901], "filter_2_bus2": [0.0, 1.0, 0.009900990099009901], "arp_rate": [-100.0, 100.0, 0.2], "arp_shift": [-100.0, 100.0, 0.2], "arp_range": [-100.0, 100.0, 0.2], "arp_offset": [-100.0, 100.0, 0.2], "arp_repeats": [-100.0, 100.0, 0.2], "arp_gate": [-100.0, 100.0, 0.2], "arp_chance": [-100.0, 100.0, 0.2], "arp_retrig_rate": [-100.0, 100.0, 0.2], "arp_velo_decay": [-100.0, 100.0, 0.2], "arp_velo_target": [-100.0, 100.0, 0.2], "arp_transpose": [-100.0, 100.0, 0.2], "arp_wrap_transpose": [-100.0, 100.0, 0.2], "arp_wrap_range": [-100.0, 100.0, 0.2], "arp_wrap_phantom_note": [-100.0, 100.0, 0.2]}, "num_categories": {"a_enable": 2, "a_pitch_track": 2, "a_reverse": 2, "a_scan_key_track": 2, "a_loop_mode": 5, "a_relative_loop": 2, "a_slice_play_mode": 2, "a_uni_stack": 9, "a_warp": 1, "a_warp_mode": 70, "a_warp_2": 1, "a_warp_2_mode": 70, "b_enable": 2, "b_pitch_track": 2, "b_reverse": 2, "b_scan_key_track": 2, "b_loop_mode": 5, "b_relative_loop": 2, "b_slice_play_mode": 2, "b_uni_stack": 9, "b_warp": 1, "b_warp_mode": 70, "b_warp_2": 1, "b_warp_2_mode": 70, "c_enable": 2, "c_pitch_track": 2, "c_reverse": 2, "c_scan_key_track": 2, "c_loop_mode": 5, "c_relative_loop": 2, "c_slice_play_mode": 2, "c_uni_stack": 9, "c_warp": 1, "c_warp_mode": 70, "c_warp_2": 1, "c_warp_2_mode": 70, "sub_enable": 2, "sub_pitch_track": 2, "sub_shape": 6, "sub_cont_phase": 2, "filter_1_on": 2, "filter_2_on": 2, "arp_enable": 2}, "cont_types": "{'a_level': <class 'str'>, 'a_pan': <class 'str'>, 'a_octave_oct': <class 'float'>, 'a_semi_semitones': <class 'float'>, 'a_fine_cents': <class 'float'>, 'a_ratio': <class 'float'>, 'a_hz_offset_hz': <class 'float'>, 'a_coarse_pitch': <class 'str'>, 'a_start': <class 'float'>, 'a_end': <class 'float'>, 'a_scan_rate': <class 'float'>, 'a_scan_bpm_rate': <class 'str'>, 'a_position': <class 'float'>, 'a_loop_start': <class 'float'>, 'a_loop_end': <class 'float'>, 'a_loop_x_fade': <class 'float'>, 'a_single_slice': <class 'float'>, 'a_unison': <class 'float'>, 'a_uni_detune': <class 'float'>, 'a_uni_blend': <class 'float'>, 'a_uni_width': <class 'float'>, 'a_uni_span': <class 'float'>, 'a_uni_rand_start': <class 'float'>, 'a_uni_warp': <class 'float'>, 'a_uni_warp_2': <class 'float'>, 'a_warp_var': <class 'float'>, 'a_warp_2_var': <class 'float'>, 'a_wt_pos': <class 'float'>, 'a_uni_wt_pos': <class 'float'>, 'a_phase': <class 'str'>, 'a_rand_phase': <class 'float'>, 'a_param44': <class 'float'>, 'a_param45': <class 'float'>, 'a_param46': <class 'float'>, 'a_param47': <class 'float'>, 'a_param48': <class 'float'>, 'a_param49': <class 'float'>, 'a_param50': <class 'float'>, 'a_param51': <class 'float'>, 'a_param52': <class 'float'>, 'a_param53': <class 'float'>, 'a_param54': <class 'float'>, 'a_param55': <class 'float'>, 'b_level': <class 'str'>, 'b_pan': <class 'str'>, 'b_octave_oct': <class 'float'>, 'b_semi_semitones': <class 'float'>, 'b_fine_cents': <class 'float'>, 'b_ratio': <class 'float'>, 'b_hz_offset_hz': <class 'float'>, 'b_coarse_pitch': <class 'str'>, 'b_start': <class 'float'>, 'b_end': <class 'float'>, 'b_scan_rate': <class 'float'>, 'b_scan_bpm_rate': <class 'str'>, 'b_position': <class 'float'>, 'b_loop_start': <class 'float'>, 'b_loop_end': <class 'float'>, 'b_loop_x_fade': <class 'float'>, 'b_single_slice': <class 'float'>, 'b_unison': <class 'float'>, 'b_uni_detune': <class 'float'>, 'b_uni_blend': <class 'float'>, 'b_uni_width': <class 'float'>, 'b_uni_span': <class 'float'>, 'b_uni_rand_start': <class 'float'>, 'b_uni_warp': <class 'float'>, 'b_uni_warp_2': <class 'float'>, 'b_warp_var': <class 'float'>, 'b_warp_2_var': <class 'float'>, 'b_wt_pos': <class 'float'>, 'b_uni_wt_pos': <class 'float'>, 'b_phase': <class 'str'>, 'b_rand_phase': <class 'float'>, 'b_param44': <class 'float'>, 'b_param45': <class 'float'>, 'b_param46': <class 'float'>, 'b_param47': <class 'float'>, 'b_param48': <class 'float'>, 'b_param49': <class 'float'>, 'b_param50': <class 'float'>, 'b_param51': <class 'float'>, 'b_param52': <class 'float'>, 'b_param53': <class 'float'>, 'b_param54': <class 'float'>, 'b_param55': <class 'float'>, 'c_level': <class 'str'>, 'c_pan': <class 'str'>, 'c_octave_oct': <class 'float'>, 'c_semi_semitones': <class 'float'>, 'c_fine_cents': <class 'float'>, 'c_ratio': <class 'float'>, 'c_hz_offset_hz': <class 'float'>, 'c_coarse_pitch': <class 'str'>, 'c_start': <class 'float'>, 'c_end': <class 'float'>, 'c_scan_rate': <class 'float'>, 'c_scan_bpm_rate': <class 'str'>, 'c_position': <class 'float'>, 'c_loop_start': <class 'float'>, 'c_loop_end': <class 'float'>, 'c_loop_x_fade': <class 'float'>, 'c_single_slice': <class 'float'>, 'c_unison': <class 'float'>, 'c_uni_detune': <class 'float'>, 'c_uni_blend': <class 'float'>, 'c_uni_width': <class 'float'>, 'c_uni_span': <class 'float'>, 'c_uni_rand_start': <class 'float'>, 'c_uni_warp': <class 'float'>, 'c_uni_warp_2': <class 'float'>, 'c_warp_var': <class 'float'>, 'c_warp_2_var': <class 'float'>, 'c_wt_pos': <class 'float'>, 'c_uni_wt_pos': <class 'float'>, 'c_phase': <class 'str'>, 'c_rand_phase': <class 'float'>, 'c_param44': <class 'float'>, 'c_param45': <class 'float'>, 'c_param46': <class 'float'>, 'c_param47': <class 'float'>, 'c_param48': <class 'float'>, 'c_param49': <class 'float'>, 'c_param50': <class 'float'>, 'c_param51': <class 'float'>, 'c_param52': <class 'float'>, 'c_param53': <class 'float'>, 'c_param54': <class 'float'>, 'c_param55': <class 'float'>, 'sub_level': <class 'str'>, 'sub_pan': <class 'str'>, 'sub_octave_oct': <class 'float'>, 'sub_coarse_pitch': <class 'str'>, 'sub_phase': <class 'str'>, 'filter_1_level': <class 'str'>, 'filter_1_type': <class 'str'>, 'filter_1_freq_hz': <class 'float'>, 'filter_1_res': <class 'float'>, 'filter_1_drive': <class 'float'>, 'filter_1_var': <class 'float'>, 'filter_1_wet': <class 'float'>, 'filter_1_stereo': <class 'float'>, 'filter_1_x': <class 'float'>, 'filter_1_y': <class 'float'>, 'filter_2_level': <class 'str'>, 'filter_2_type': <class 'str'>, 'filter_2_freq_hz': <class 'float'>, 'filter_2_res': <class 'float'>, 'filter_2_drive': <class 'float'>, 'filter_2_var': <class 'float'>, 'filter_2_wet': <class 'float'>, 'filter_2_stereo': <class 'float'>, 'filter_2_x': <class 'float'>, 'filter_2_y': <class 'float'>, 'a_filter_balance': <class 'float'>, 'a_bus1': <class 'str'>, 'a_bus2': <class 'str'>, 'b_filter_balance': <class 'float'>, 'b_bus1': <class 'str'>, 'b_bus2': <class 'str'>, 'c_filter_balance': <class 'float'>, 'c_bus1': <class 'str'>, 'c_bus2': <class 'str'>, 'sub_osc_filter_balance': <class 'float'>, 'sub_osc_bus1': <class 'str'>, 'sub_osc_bus2': <class 'str'>, 'filter_1_bus1': <class 'str'>, 'filter_1_bus2': <class 'str'>, 'filter_2_bus1': <class 'str'>, 'filter_2_bus2': <class 'str'>, 'arp_rate': <class 'float'>, 'arp_shift': <class 'float'>, 'arp_range': <class 'float'>, 'arp_offset': <class 'float'>, 'arp_repeats': <class 'float'>, 'arp_gate': <class 'float'>, 'arp_chance': <class 'float'>, 'arp_retrig_rate': <class 'float'>, 'arp_velo_decay': <class 'float'>, 'arp_velo_target': <class 'float'>, 'arp_transpose': <class 'float'>, 'arp_wrap_transpose': <class 'float'>, 'arp_wrap_range': <class 'float'>, 'arp_wrap_phantom_note': <class 'float'>}", "cat_types": "{'a_enable': <class 'bool'>, 'a_pitch_track': <class 'bool'>, 'a_reverse': <class 'str'>, 'a_scan_key_track': <class 'bool'>, 'a_loop_mode': <class 'str'>, 'a_relative_loop': <class 'bool'>, 'a_slice_play_mode': <class 'str'>, 'a_uni_stack': <class 'str'>, 'a_warp': <class 'str'>, 'a_warp_mode': <class 'str'>, 'a_warp_2': <class 'str'>, 'a_warp_2_mode': <class 'str'>, 'b_enable': <class 'bool'>, 'b_pitch_track': <class 'bool'>, 'b_reverse': <class 'str'>, 'b_scan_key_track': <class 'bool'>, 'b_loop_mode': <class 'str'>, 'b_relative_loop': <class 'bool'>, 'b_slice_play_mode': <class 'str'>, 'b_uni_stack': <class 'str'>, 'b_warp': <class 'str'>, 'b_warp_mode': <class 'str'>, 'b_warp_2': <class 'str'>, 'b_warp_2_mode': <class 'str'>, 'c_enable': <class 'bool'>, 'c_pitch_track': <class 'bool'>, 'c_reverse': <class 'str'>, 'c_scan_key_track': <class 'bool'>, 'c_loop_mode': <class 'str'>, 'c_relative_loop': <class 'bool'>, 'c_slice_play_mode': <class 'str'>, 'c_uni_stack': <class 'str'>, 'c_warp': <class 'str'>, 'c_warp_mode': <class 'str'>, 'c_warp_2': <class 'str'>, 'c_warp_2_mode': <class 'str'>, 'sub_enable': <class 'bool'>, 'sub_pitch_track': <class 'bool'>, 'sub_shape': <class 'str'>, 'sub_cont_phase': <class 'bool'>, 'filter_1_on': <class 'bool'>, 'filter_2_on': <class 'bool'>, 'arp_enable': <class 'bool'>}"}
